opa-local-minikube/resources/lbg-example/lbg-bcb-ns.yaml
apiVersion: v1
kind: Namespace
metadata:
  annotations:
    ingress-allowlist: "*.lbg.bcb.com"
    required-labels: "lbg-bcb-resource"
  name: lbg-bcb-project-2
