opa-local-minikube/resources/lbg-example/lbg-ingress-bad.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: lbg-ingress-bad
  namespace: lbg-bcb-project-1
spec:
  rules:
  - host: alex.lbg.com
    http:
      paths:
      - pathType: ImplementationSpecific
        path: /
        backend:
          service:
            name: nginx
            port:
              number: 80
