opa-local-minikube/resources/lbg-example/lbg-ingress-ok.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: lbg-ingress-ok
  namespace: lbg-bcb-project-2
spec:
  rules:
  - host: alex.lbg.bcb.com
    http:
      paths:
      - pathType: ImplementationSpecific
        path: /
        backend:
          service:
            name: nginx
            port:
              number: 80
